--- a/styles.css
+++ b/styles.css
@@ -379,7 +379,7 @@ p {
 }
 
 .contact {
-  background-image: url("images/bg/header-shapes\ mobile.png");
+  background-image: url("images/bg/contact\ form\ shapes-mobile@2x.png");
   background-repeat: no-repeat;
   background-position: right 50px;
   background-color: #6070ff;
