--- a/styles.css
+++ b/styles.css
@@ -371,6 +371,66 @@ p {
   margin-top: 10px;
 }
 
+/* Contact form */
+.contact-white {
+  background: #fff;
+  color: #fff;
+  width: 100%;
+}
+
+.contact {
+  background-image: url("images/bg/contact\ form\ shapes-mobile@2x.png");
+  background-repeat: no-repeat;
+  background-position: right 50px;
+  background-color: #6070ff;
+  background-size: contain;
+  border-top-left-radius: 60px;
+  text-align: center;
+  height: 779px;
+}
+
+.contact form {
+  margin-top: 40px;
+}
+
+.contact .form-control {
+  width: 94%;
+  margin: 10px 0;
+}
+
+.contact input {
+  width: 100%;
+  background: #fff;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  padding: 10px;
+  height: 48px;
+}
+
+.contact textarea {
+  width: 100%;
+  background: #fff;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  padding: 10px;
+  height: 170px;
+}
+
+#name::placeholder {
+  color: #172b4d;
+  font-family: "Poppins", sans-serif;
+}
+
+#email::placeholder {
+  color: #172b4d;
+  font-family: "Poppins", sans-serif;
+}
+
+#textarea::placeholder {
+  color: #b3bac5;
+  font-family: "Poppins", sans-serif;
+}
+
 @media only screen and (min-width: 768px) {
   img {
     width: 100%;
