--- a/styles.css
+++ b/styles.css
@@ -379,14 +379,14 @@ p {
 }
 
 .contact {
-  background-image: url("images/bg/contact\ form\ shapes-mobile@2x.png");
+  background-image: url("images/bg/contact-form.png");
   background-repeat: no-repeat;
   background-position: right 50px;
   background-color: #6070ff;
   background-size: contain;
   border-top-left-radius: 60px;
   text-align: center;
-  height: 779px;
+  height: 790px;
 }
 
 .contact form {
@@ -394,7 +394,7 @@ p {
 }
 
 .contact .form-control {
-  width: 94%;
+  width: 92%;
   margin: 10px 0;
 }
 
