--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ p {
 }
 
 .contact p {
+  margin-top: 10px;
   font-size: 20px;
 }
 
@@ -285,7 +286,7 @@ p {
   display: flex;
   border: 1px solid #fff;
   border-radius: 8px;
-  width: 126px;
+  width: 140px;
   height: 48px;
   background: #fff;
   font-weight: 500;
@@ -293,10 +294,18 @@ p {
   margin: 10px 10px;
   margin-top: 10px;
   color: #396df2;
+  padding: 10px 16px 10px 16px;
+  cursor: pointer;
 }
 
-.btn-white h5 {
-  padding: 12px 16px 12px 16px;
+.btn-white:active {
+  background-color: #2230d2;
+  color: #fff;
+}
+
+.btn-white:hover {
+  background-color: #6070ff;
+  color: #fff;
 }
 
 .btn-default:active {
@@ -395,8 +404,13 @@ p {
   height: 810px;
 }
 
+.contact h3 {
+  font-size: 40px;
+  margin-top: 95px;
+}
+
 .contact form {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .contact .form-control {
@@ -411,6 +425,7 @@ p {
   border-radius: 8px;
   padding: 10px;
   height: 42px;
+  margin-bottom: 5px;
 }
 
 .contact textarea {
@@ -420,6 +435,7 @@ p {
   border-radius: 8px;
   padding: 10px;
   height: 170px;
+  margin-bottom: 5px;
 }
 
 #name::placeholder {
