Edit styles.css for logo animation

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ p {
   color: var(--color-logo);
 }
 
+.logo:hover {
+  transition: transform 1.5s;
+  transform: rotate3d(1, 1, 1, 360deg);
+}
+
 .navbar i {
   color: var(--color-logo);
 }
@@ -542,6 +547,12 @@ p {
 
   .card-left {
     width: 80%;
+  }
+
+  .card-left:hover {
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    transform: scale(1.3);
   }
 
   .card-left-desk {
