--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,13 @@
 
 body {
   background-color: #f4f5f7;
+  font-style: normal;
+  color: #333;
+  line-height: 1.6;
+}
+
+ul {
+  list-style-type: none;
 }
 
 img {
@@ -58,6 +65,54 @@ p {
   padding: 20px;
 }
 
+.popup-page {
+  position: fixed;
+  top: 120px;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+}
+
+
+.flex-nl .lang-nl ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  gap: 8px;
+  width: 214px;
+  height: 24px;
+  flex-wrap: wrap;
+}
+
+.flex-nl .lang-nl {
+  padding: 5px 10px;
+  margin-right: 10px;
+  background: #ebebff;
+  font-weight: 500;
+  font-size: 12px;
+  color: #6070ff;
+  border-radius: 8px;
+}
+
+.social a {
+  margin-right: 10px;
+  color: #505f79;
+  font-size: 25px;
+}
+
+.social-nl a {
+  margin-right: 10px;
+  color: #505f79;
+  font-size: 25px;
+}
+
+.social a:hover {
+  color: #505f79;
+  opacity: 0.5;
+}
+
 /* Nav styles */
 .navbar {
   height: 70px;
@@ -70,6 +125,11 @@ p {
 
 .navbar ul {
   display: none;
+}
+
+.popup-page .flex-nl {
+  display: flex;
+  flex-direction: column;
 }
 
 .flex {
@@ -181,6 +241,27 @@ p {
   color: #7f8cff;
 }
 
+.link-button a {
+  width: 83px;
+  height: 20px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  align-items: center;
+  text-align: center;
+  color: #6070ff;
+}
+
+.link-button a img {
+  margin-left: 5px;
+}
+
+.link-button img {
+  width: 15px;
+}
+
 /* Social Media styles */
 .social {
   display: flex;
@@ -215,13 +296,20 @@ p {
   border-radius: 8px;
 }
 
+.popup-page .card {
+  width: 80%;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 10%;
+}
+
 .work .card {
   display: flex;
   flex-direction: column;
   background-color: #fff;
   border-radius: 16px;
   padding: 20px;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
   margin-top: 104px;
   border: 1px solid #e6e8eb;
@@ -242,6 +330,20 @@ p {
 .lan h2 {
   font-weight: 500;
   font-size: 20px;
+}
+
+.link-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 25px;
+  order: 1;
+  border-top: 1px solid #ebecf0;
+  padding-top: 10px;
+}
+
+.popup-page .cano {
+  margin-top: 0;
 }
 
 .skill-lang li h2 {
@@ -274,6 +376,13 @@ p {
 
 .work .lang li {
   margin-bottom: 10px;
+  padding: 5px 10px;
+  margin-right: 10px;
+  background: #ebebff;
+  font-weight: 500;
+  font-size: 12px;
+  color: #6070ff;
+  border-radius: 8px;
 }
 
 .work .card .cano li {
@@ -316,6 +425,11 @@ p {
 
 .work .card-left-desk {
   display: none;
+}
+
+.link-button a:hover {
+  background-color: #6070ff;
+  color: #fff;
 }
 
 .btn-default {
@@ -404,7 +518,7 @@ p {
   font-weight: 700;
   font-size: 40px;
   color: #172b4d;
-  margin-top: 0;
+  margin-top: 20px;
 }
 
 .skills .skill li span h2 {
@@ -552,6 +666,38 @@ p {
     padding: 5rem 9rem;
   }
 
+  .popup-page .snap-image,
+  .popup-page .snap-image img {
+    height: 360px;
+    backdrop-filter: blur(5px);
+  }
+
+  .popup-page .card {
+    width: 80%;
+    display: flex;
+    margin: 0 auto;
+    margin-top: 10%;
+  }
+
+  .popup-page .flex-nl {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: auto;
+  }
+
+  .popup-page .flex-nl p {
+    grid-column: 1/1;
+    grid-row: 1/3;
+  }
+
+  .popup-page {
+    position: fixed;
+    top: 120px;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+  }
+
   .contact p {
     font-size: 20px;
     width: 42%;
@@ -628,7 +774,7 @@ p {
   }
 
   .work .card .lang {
-    margin-top: 15px;
+    margin-top: 10px;
   }
 
   .contact button {
@@ -693,12 +839,31 @@ p {
     height: 48px;
   }
 
+  .link-button a img {
+    margin-left: 5px;
+  }
+
+  .link-button {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+  }
+
+  .link-button i {
+    width: 20px;
+  }
+
   .skill-lang {
     flex-direction: row;
     justify-content: start;
     border-radius: 8px;
     width: 100%;
     margin-top: 20px;
+  }
+
+  .flex-nl .lang {
+    display: flex;
+    flex-wrap: wrap;
   }
 
   /* Contact form */
