--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   list-style: none;
   text-decoration: none;
 }
@@ -101,6 +101,10 @@ p {
   background: transparent;
 }
 
+.navbar ul {
+  display: none;
+}
+
 .flex-nl .lang-nl ul {
   display: flex;
   flex-direction: column;
@@ -134,9 +138,23 @@ p {
   font-size: 25px;
 }
 
-.social a:hover {
-  color: #505f79;
-  opacity: 0.5;
+.link-button a {
+  width: 83px;
+  height: 20px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  align-items: center;
+  text-align: center;
+  color: #6070ff;
+}
+
+.mobile-nav li a {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 500;
 }
 
 /* Nav styles */
@@ -149,10 +167,6 @@ p {
   width: 100%;
 }
 
-.navbar ul {
-  display: none;
-}
-
 .popup-page .flex-nl {
   display: flex;
   flex-direction: column;
@@ -163,18 +177,6 @@ p {
   justify-content: space-between;
   align-items: center;
   text-transform: none;
-}
-
-.social-nl a {
-  margin-right: 10px;
-  color: #505f79;
-  font-size: 25px;
-}
-
-.mobile-nav li a {
-  color: #fff;
-  font-size: 32px;
-  font-weight: 500;
 }
 
 .mobile-nav {
@@ -212,7 +214,7 @@ p {
 /* Banner Section */
 .banner {
   position: relative;
-  background-image: url('images/bg/header-shapes\ mobile.png');
+  background-image: url("images/bg/header-shapes\ mobile.png");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center 50px;
@@ -267,25 +269,17 @@ p {
   color: #7f8cff;
 }
 
-.link-button a {
-  width: 83px;
-  height: 20px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 20px;
-  align-items: center;
-  text-align: center;
-  color: #6070ff;
+.link-button img {
+  width: 15px;
+}
+
+.skills img {
+  width: 48px;
+  height: 48px;
 }
 
 .link-button a img {
   margin-left: 5px;
-}
-
-.link-button img {
-  width: 15px;
 }
 
 /* Social Media styles */
@@ -320,13 +314,6 @@ p {
   font-size: 12px;
   color: #6070ff;
   border-radius: 8px;
-}
-
-.popup-page .card {
-  width: 80%;
-  display: flex;
-  margin: 0 auto;
-  margin-top: 10%;
 }
 
 .work .card {
@@ -471,7 +458,7 @@ p {
 }
 
 .btn-white {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   display: flex;
   border: 1px solid #fff;
   border-radius: 8px;
@@ -555,11 +542,6 @@ p {
   margin-top: 10px;
 }
 
-.skills img {
-  width: 48px;
-  height: 48px;
-}
-
 .skill-lang {
   flex-direction: column;
   border-radius: 8px;
@@ -583,7 +565,7 @@ p {
 }
 
 .contact {
-  background-image: url('images/bg/contact-form.png');
+  background-image: url("images/bg/contact-form.png");
   background-repeat: no-repeat;
   background-position: right;
   background-color: #6070ff;
@@ -629,21 +611,21 @@ p {
 
 #name::placeholder {
   color: #172b4d;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 500;
 }
 
 #email::placeholder {
   color: #172b4d;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 500;
 }
 
 #textarea::placeholder {
   color: #b3bac5;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
 }
 
@@ -676,7 +658,7 @@ p {
   /* banner */
   .banner {
     position: static;
-    background-image: url('images/bg/header-bg.png');
+    background-image: url("images/bg/header-bg.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -690,6 +672,15 @@ p {
   .banner .banner-text {
     /* padding: 150px 11rem; */
     padding: 5rem 9rem;
+  }
+
+  .skills img {
+    width: 48px;
+    height: 48px;
+  }
+
+  .link-button a img {
+    margin-left: 5px;
   }
 
   .popup-page .snap-image,
@@ -711,6 +702,12 @@ p {
     grid-template-rows: auto;
   }
 
+  .contact p {
+    font-size: 20px;
+    width: 42%;
+    margin: 10px auto;
+  }
+
   .popup-page .flex-nl p {
     grid-column: 1/1;
     grid-row: 1/3;
@@ -722,12 +719,6 @@ p {
     left: 0;
     height: 100vh;
     width: 100%;
-  }
-
-  .contact p {
-    font-size: 20px;
-    width: 42%;
-    margin: 10px auto;
   }
 
   .banner .banner-text p {
@@ -799,6 +790,11 @@ p {
     margin-top: 10px;
   }
 
+  .flex-nl .lang {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   .work .card .lang {
     margin-top: 10px;
   }
@@ -855,28 +851,19 @@ p {
     border-bottom: 1px solid #dfe1e6;
   }
 
+  .link-button i {
+    width: 20px;
+  }
+
   .skills .skill li span i {
     font-size: 15px;
     color: #505f79;
-  }
-
-  .skills img {
-    width: 48px;
-    height: 48px;
-  }
-
-  .link-button a img {
-    margin-left: 5px;
   }
 
   .link-button {
     display: flex;
     flex-direction: row;
     gap: 5px;
-  }
-
-  .link-button i {
-    width: 20px;
   }
 
   .skill-lang {
@@ -887,11 +874,6 @@ p {
     margin-top: 20px;
   }
 
-  .flex-nl .lang {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
   /* Contact form */
   .contact-white {
     background: #fff;
@@ -900,7 +882,7 @@ p {
   }
 
   .contact {
-    background-image: url('images/bg/contact-bg.png');
+    background-image: url("images/bg/contact-bg.png");
     background-repeat: no-repeat;
     background-position: center 80px;
     background-color: #6070ff;
